--- a/src/components/frame/style.less
+++ b/src/components/frame/style.less
@@ -7,6 +7,8 @@
 												"slider"
 												"dayselection";
 	grid-template-rows: 10vh 25vh 25vh 20vh 10vh 10vh;
+	max-width: 700px;
+	margin: auto;
 }
 
 
