created general style sheet and imported to all component style sheets

--- a/src/components/frame/style.less
+++ b/src/components/frame/style.less
@@ -1,3 +1,6 @@
+@import '../../style/wavrStyle.less';
+
+
 .grid {
 	display: grid;
 	grid-template-areas: 	"head"
@@ -14,13 +17,10 @@
 
 .head {
 	grid-area: "head";
-	background-color: red;
-	color: white;
 }
 
 .swell {
 	grid-area: "swell";
-	background-color: "green";
 
 }
 
