font file type fix

--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -11,7 +11,7 @@
 // Text
 @font-face {
     font-family: JohnstonReg;
-    src: url(./fonts/johnstonReg.otf);
+    src: url(fonts/johnstonReg.woff);
 }
 @fontFamily : JohnstonReg;
 @extraLargeFont : 24px; // for compass dir
