applying styles to slider component

--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -31,4 +31,6 @@
 .section() {
     background-color: @background;
     padding: @sectionPadding;
+    color: @white;
+    font-family: @fontFamily;
 }
