--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -1,1 +1,21 @@
 @import '../../../style/wavrStyle.less';
+.dropdown Button {
+  text-align: left;
+  font-size: @mediumFont;
+  width: 150px;
+  background-color: @backdropGrey;
+  border: 2px solid black;
+}
+
+.dropdown Button:hover {
+  background-color: @background;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.dropButton Button {
+  margin: 15px 0px 0px 15px;
+}
