--- a/src/components/frame/style.less
+++ b/src/components/frame/style.less
@@ -9,9 +9,11 @@
 												"tide"
 												"slider"
 												"dayselection";
-	grid-template-rows: 10vh 25vh 25vh 15vh 15vh 10vh;
+	grid-template-rows: 10vh 25vh 25vh 17.5vh 12.5vh 10vh;
+	grid-gap: 1px;
 	max-width: 700px;
 	margin: auto;
+	background-color: @background;
 }
 
 
@@ -21,7 +23,6 @@
 
 .swell {
 	grid-area: "swell";
-
 }
 
 .weather {
