--- a/src/components/frame/swell/style.less
+++ b/src/components/frame/swell/style.less
@@ -2,4 +2,22 @@
 
 .swell {
     .section;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20% 80%;
+    grid-template-areas: 'title .'
+                         'boxes graph';
+    grid-gap:1px;
+}
+
+.Title{
+	grid-area: "title";
+}
+
+.boxes{
+	grid-area: "boxes";
+}
+
+.graph{
+	grid-area: "graph";
 }
