improved but slightly hacky solution (swell + titles fixed)

--- a/src/components/frame/style.less
+++ b/src/components/frame/style.less
@@ -9,11 +9,11 @@
 												"tide"
 												"slider"
 												"dayselection";
-	grid-template-rows: 10vh 25vh 25vh 17.5vh 12.5vh 10vh;
-	grid-gap: 1px;
+	grid-template-rows: 5vh 25vh 25vh 22.5vh 12.5vh 10vh;
+	grid-gap: 0px;
 	max-width: 700px;
 	margin: auto;
-	background-color: @background;
+	// background-color: @background;
 }
 
 
