--- a/src/components/frame/swell/style.less
+++ b/src/components/frame/swell/style.less
@@ -1,23 +1,25 @@
 @import '../../../style/wavrStyle.less';
 
 .swell {
-    .section;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 20% 80%;
-    grid-template-areas: 'title .'
-                         'boxes graph';
-    grid-gap:1px;
+  .section;
+  display: grid;
+  grid-template-areas:"title .    "
+                      "boxes graph";
+	grid-template-columns: 50% auto;
+  grid-template-rows: 20% 80%;
+	grid-gap: 2px;
 }
 
-.Title{
-	grid-area: "title";
+.header{
+  grid-area: "title";
+  justify-self: stretch;
 }
 
 .boxes{
-	grid-area: "boxes";
+  grid-area: "boxes";
 }
 
 .graph{
-	grid-area: "graph";
+  grid-area: "graph";
+  padding: 15px !important;
 }
