--- a/src/components/frame/dayselection/style.less
+++ b/src/components/frame/dayselection/style.less
@@ -1,4 +1,10 @@
-@import '../../../style/wavrStyle.less';
+@import '../../../style/wavrStyle.less';\
+
 .daySel {
     .section;
+    display: grid;
+    grid-template-areas:
+                          ". day0 day1 day2 .";
+    grid-template-columns: 5% 30% 30% 30% 5%;
+    grid-template-rows: auto;
 }
