--- a/src/components/frame/slider/style.less
+++ b/src/components/frame/slider/style.less
@@ -1,26 +1,19 @@
 @import '../../../style/wavrStyle';
 
-.fontColour{
-    color : @white;
-}
-
 .slider {
     .section;
     display: grid;
-    grid-template-columns: 40% 20% 40%;
-    grid-template-rows: 20% 80%;
-    grid-template-areas: ".       slide   .       "
-                         "stars   .       timeText";
+    grid-template-columns: 100%;
+    grid-template-rows: auto auto;
 }
 
-#slider{
-    grid-area: "slide";
-}
-
-#stars{
-    grid-area: "stars";
+.info {
+    .section;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
 }
 
 #timeText{
-    grid-area: "timeText";
+    justify-self: right !important;
 }
