--- a/src/components/frame/slider/style.less
+++ b/src/components/frame/slider/style.less
@@ -8,12 +8,8 @@
 }
 
 .info {
-    .section;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end; 
 }
 
-#timeText{
-    justify-self: right !important;
-}
