--- a/src/components/frame/swell/style.less
+++ b/src/components/frame/swell/style.less
@@ -3,23 +3,6 @@
 .swell {
   .section;
   display: grid;
-  grid-template-areas:"title .    "
-                      "boxes graph";
-	grid-template-columns: 50% auto;
-  grid-template-rows: 20% 80%;
-	grid-gap: 2px;
-}
-
-.header{
-  grid-area: "title";
-  justify-self: stretch;
-}
-
-.boxes{
-  grid-area: "boxes";
-}
-
-.graph{
-  grid-area: "graph";
-  padding: 15px !important;
+	grid-template-columns: 30% auto;
+  grid-template-rows:  30px auto;
 }
