--- a/src/components/frame/style.less
+++ b/src/components/frame/style.less
@@ -3,40 +3,9 @@
 
 .grid {
 	display: grid;
-	grid-template-areas: 	"head"
-												"swell"
-												"weather"
-												"tide"
-												"slider"
-												"dayselection";
 	grid-template-rows: 5vh 25vh 25vh 22.5vh 12.5vh 10vh;
 	grid-gap: 0px;
 	max-width: 700px;
 	margin: auto;
-	// background-color: @background;
-}
-
-
-.head {
-	grid-area: "head";
-}
-
-.swell {
-	grid-area: "swell";
-}
-
-.weather {
-	grid-area: "weather";
-}
-
-.tide {
-	grid-area: "tide";
-}
-
-.slider {
-	grid-area: "slider";
-}
-
-.dayselection {
-	grid-area: "dayselection";
+	background-color: @background;
 }
