--- a/src/components/frame/title/style.less
+++ b/src/components/frame/title/style.less
@@ -1,7 +1,7 @@
 @import '../../../style/wavrStyle.less';
 
 .title{
-  margin: 0;
-  position: relative;
-  bottom: 10px;
+  grid-column: 1 / span 2;
+  align-self: center;
+  .titleFont;
 }
