--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -8,6 +8,9 @@
 @compassBlack : #000;
 @red : #E91D29;
 
+// Shadow
+@innerShadow : inset 0 1 3px rgba(0,0,0,0.5);
+
 // Text
 @font-face {
     font-family: JohnstonReg;
