--- a/src/components/frame/tide/style.less
+++ b/src/components/frame/tide/style.less
@@ -2,3 +2,13 @@
 .tide {
     .section;
 }
+
+.svg {
+    width: 100%;
+    height: 20vh;
+}
+
+.backdrop {
+    fill: @backdropGrey;
+    box-shadow: @innerShadow;
+}
