cover panel and bar set with actual time

--- a/src/components/frame/tide/style.less
+++ b/src/components/frame/tide/style.less
@@ -10,5 +10,27 @@
 
 .backdrop {
     fill: @backdropGrey;
-    box-shadow: @innerShadow;
+    .innerShadow;
+}
+
+.wave {
+    fill : @primaryBlue;
+}
+
+.text {
+    white-space: pre; 
+    fill: @white; 
+    font-size: 10px;
+    font-family: @fontFamily;
+}
+
+.coverPane {
+    fill: @backdropGrey;
+    opacity: 0.5;
+}
+
+.timeBar {
+    stroke: @white; 
+    stroke-linecap: round; 
+    stroke-width: 2px;
 }
