--- a/src/components/frame/weather/style.less
+++ b/src/components/frame/weather/style.less
@@ -2,9 +2,8 @@
 
 .weather {
     .section;
+    position: relative;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 30px auto;
 }
-
-
