--- a/src/components/frame/dayselection/style.less
+++ b/src/components/frame/dayselection/style.less
@@ -11,8 +11,11 @@
   background-color: @backdropGrey;
   color: @white;
   text-align: center;
-  font-size: 20px;;
+  font-size: 20px;
   cursor: pointer;
+  text-decoration: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .button:hover {
