--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -1,21 +1,16 @@
 @import '../../../../style/wavrStyle.less';
 
 .swellSvg {
-  width: 500px;
-  height: 250px;
   background-color: #4e4e4e;
+  position: absolute;
+  max-height: 100%;
+  max-width: 225px;
 }
 
 .swellPath {
-  stroke: #41bdff;
-  stroke-width: 10px;
-  stroke-linecap: round;
   fill: #41bdff;
 }
 
-.cont{
-  transform: scale(0.6);
+.cont {
   position: relative;
-  left: -100px;
-  top: -70px;
 }
