swell graph styling

--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -5,6 +5,7 @@
   position: absolute;
   max-height: 100%;
   max-width: 225px;
+  margin: auto;
 }
 
 .swellPath {
@@ -12,5 +13,6 @@
 }
 
 .cont {
-  position: relative;
+  display: flex;
+  justify-content: center;
 }
