added secondary swell

--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -8,8 +8,12 @@
   margin: auto;
 }
 
-.swellPath {
-  fill: #41bdff;
+.swellPathPrimary {
+  fill: @primaryBlue;
+}
+
+.swellPathSecondary {
+  fill: @secondaryBlue;
 }
 
 .cont {
