--- a/src/components/frame/weather/wind/style.less
+++ b/src/components/frame/weather/wind/style.less
@@ -5,3 +5,27 @@
   height: 80%;
   margin: auto;
 }
+
+.meter {
+  stroke: @primaryBlue;
+}
+
+.bg {
+  stroke: @backdropGrey;
+}
+
+.backCircle {
+  stroke: @white;
+}
+
+.dirText{
+  fill: @white;
+}
+
+.speedText {
+  fill: @white;
+}
+
+.pointer {
+  fill: @red;
+}
