--- a/src/components/frame/tide/style.less
+++ b/src/components/frame/tide/style.less
@@ -1,11 +1,19 @@
 @import '../../../style/wavrStyle.less';
 .tide {
     .section;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto auto;
 }
 
 .svg {
-    width: 100%;
     height: 20vh;
+    max-width: 100%;
+    justify-self: center;
+}
+
+.hider {
+    fill: @background;
 }
 
 .backdrop {
@@ -20,7 +28,7 @@
 .text {
     white-space: pre; 
     fill: @white; 
-    font-size: 10px;
+    font-size: @smallFont;
     font-family: @fontFamily;
 }
 
