--- a/src/components/frame/swell/style.less
+++ b/src/components/frame/swell/style.less
@@ -4,6 +4,6 @@
   .section;
   display: grid;
 	grid-template-columns: 30% auto;
-  grid-template-rows:  30px auto;
+  grid-template-rows: 30px 130px;
   position: relative;
 }
