--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -1,11 +1,14 @@
 @import '../../../../style/wavrStyle.less';
 
 .swellSvg {
-  background-color: #4e4e4e;
   position: absolute;
-  max-height: 100%;
-  max-width: 225px;
-  margin: auto;
+  background-color: #4e4e4e;
+  max-height: 63%;
+  width: 50%;
+  height: 100%;
+  margin-right: 3%;
+  max-width: 248px;
+  right: 20%;
 }
 
 .swellPathPrimary {
@@ -17,6 +20,15 @@
 }
 
 .cont {
-  display: flex;
-  justify-content: center;
+  width: 60%;
+  height: 60%;
+  display: -ms-flexbox;
+  display: block;
+  -ms-flex-pack: right;
+  justify-content: right;
+  transform: scale(2);
+  position: absolute;
+  left: 30%;
+  margin-right: -20px;
+  top: 50%;
 }
