--- a/src/components/frame/swell/swellBoxes/style.less
+++ b/src/components/frame/swell/swellBoxes/style.less
@@ -1,1 +1,34 @@
 @import '../../../../style/wavrStyle.less';
+
+.box1{
+  font-size: 14px;
+  position: absolute;
+  font-weight: bold;
+  margin: 0px 0px 7px 15px;
+  padding-left: 2%;
+  width: 25%;
+  white-space: nowrap;
+  height: 34%;
+  background-color: @primaryBlue;
+  transition: opacity 0.2s;
+  z-index: 1000;
+}
+
+.box2{
+  font-size: 14px;
+  position: absolute;
+  font-weight: bold;
+  margin-top: 10.5vh;
+  margin-left: 15px;
+  padding-left: 2%;
+  width: 25%;
+  white-space: nowrap;
+  height: 34%;
+  background-color: @secondaryBlue;
+  transition: opacity 0.2s;
+  z-index: 1000;
+}
+
+.box1:hover, .box2:hover{
+  opacity: 0.9;
+}
