changed font of wind guage

--- a/src/components/frame/weather/wind/style.less
+++ b/src/components/frame/weather/wind/style.less
@@ -20,10 +20,12 @@
 
 .dirText{
   fill: @white;
+  font-family: @fontFamily;
 }
 
 .speedText {
   fill: @white;
+  font-family: @fontFamily;
 }
 
 .pointer {
