--- a/src/components/frame/dayselection/style.less
+++ b/src/components/frame/dayselection/style.less
@@ -15,5 +15,9 @@
 }
 
 .button:hover {
-  background-color: @background;
+  background-color: @background !important;
+}
+
+.button:focus {
+  outline: none;
 }
