--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -4,6 +4,7 @@
 @background : #323232;
 @backdropGrey : #4E4E4E;
 @white : #F3F3F3;
+@offwhite : rgb(198, 198, 198);
 @starColour: #D8D8D8; //same as cloud colour
 @compassBlack : #000;
 @red : #E91D29;
