--- a/src/components/frame/stars/style.less
+++ b/src/components/frame/stars/style.less
@@ -1,1 +1,8 @@
 @import '../../../style/wavrStyle.less';
+
+.stars {
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
