--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -1,14 +1,9 @@
 @import '../../../../style/wavrStyle.less';
 
 .swellSvg {
-  position: absolute;
   background-color: #4e4e4e;
-  max-height: 63%;
-  width: 50%;
+  width: 100%;
   height: 100%;
-  margin-right: 3%;
-  max-width: 248px;
-  right: 20%;
 }
 
 .swellPathPrimary {
@@ -20,15 +15,6 @@
 }
 
 .cont {
-  width: 60%;
-  height: 60%;
-  display: -ms-flexbox;
-  display: block;
-  -ms-flex-pack: right;
-  justify-content: right;
-  transform: scale(2);
-  position: absolute;
-  left: 30%;
-  margin-right: -20px;
-  top: 50%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
