positioning of weather section

--- a/src/components/frame/weather/wind/style.less
+++ b/src/components/frame/weather/wind/style.less
@@ -1,33 +1,4 @@
 @import '../../../../style/wavrStyle.less';
-
-.dial{
-  position: absolute;
-  height: 80%;
-  margin: auto;
-}
-
-.meter {
-  stroke: @primaryBlue;
-}
-
-.bg {
-  stroke: @backdropGrey;
-}
-
-.backCircle {
-  stroke: @white;
-}
-
-.dirText{
-  fill: @white;
-  font-family: @fontFamily;
-}
-
-.speedText {
-  fill: @white;
-  font-family: @fontFamily;
-}
-
-.pointer {
-  fill: @red;
+.image{
+  width: 20%;
 }
