--- a/src/components/frame/weather/style.less
+++ b/src/components/frame/weather/style.less
@@ -4,6 +4,6 @@
     .section;
     position: relative;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 30px auto;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
 }
