--- a/src/components/loading/style.less
+++ b/src/components/loading/style.less
@@ -2,7 +2,7 @@
 
 .loader {
   position: fixed;
-  background: radial-gradient(ellipse at center, @white 0%,@white 100%);
+  background: radial-gradient(ellipse at center, @background 0%,@background 100%);
   width: 100%;
   height: 100%;
   z-index: 1000;
@@ -21,6 +21,7 @@
   width: 100px;
   height: 100px;
   margin: auto;
+  color: @white;
   top: 210px;
   position: absolute;
   left: 0;
@@ -58,7 +59,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: @white;
+  background-color: @backdropGrey;
   border-radius: 50px;
   overflow: hidden;
   z-index: 1;
