--- a/src/components/frame/stars/style.less
+++ b/src/components/frame/stars/style.less
@@ -5,4 +5,5 @@
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+    white-space: nowrap;
 }
