--- a/src/components/frame/slider/style.less
+++ b/src/components/frame/slider/style.less
@@ -12,3 +12,98 @@
     justify-content: space-between;
     align-items: flex-end;
 }
+
+input[type=range] {
+  height: 24px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+  background-color: @background;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: @backdropGrey;
+  border-radius: 14px;
+  border: 0px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 0px solid #000000;
+  height: 18px;
+  width: 15%;
+  max-width: 65px;
+  border-radius: 12px;
+  background: @primaryBlue;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3px;
+  transition: all 0.2s;
+}
+input[type=range]::-webkit-slider-thumb:hover, input[type=range]::-webkit-slider-thumb:active{
+  background-color: @secondaryBlue;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: @backdropGrey;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #50555C;
+  background: @backdropGrey;
+  border-radius: 14px;
+  border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 0px solid #000000;
+  height: 18px;
+  width: 60px;
+  border-radius: 12px;
+  background: @primaryBlue;
+  cursor: pointer;
+}
+input[type=range]::-moz-range-thumb:hover, input[type=range]::-moz-range-thumb:active{
+  background: @secondaryBlue;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: @backdropGrey;
+  border: 0px solid #000000;
+  border-radius: 28px;
+  box-shadow: 1px 1px 1px #50555C;
+}
+input[type=range]::-ms-fill-upper {
+  background: @backdropGrey;
+  border: 0px solid #000000;
+  border-radius: 28px;
+  box-shadow: 1px 1px 1px #50555C;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0px 0px 0px #000000;
+  border: 0px solid #000000;
+  height: 18px;
+  width: 60px;
+  border-radius: 12px;
+  background: @primaryBlue;
+  cursor: pointer;
+}
+input[type=range]::-ms-thumb:hover, input[type=range]::-ms-thumb:active{
+  background: @secondaryBlue;
+}
