--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -2,19 +2,20 @@
 .grid{
     .section;
     display: grid;
-    grid-template-columns: 20% 60% 20%;
+    grid-template-columns: 30% 36% 30%;
     grid-template-rows: auto;
 }
 
 .dial{
   position: relative;
-  height: 120%;
+  max-height: 150px;
   margin: auto;
 }
 
 .image{
-  width: 30%;
+  width: 100%;
   margin:auto;
+  max-width: 60px;
 }
 
 .meter {
