--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -2,27 +2,42 @@
 .grid{
     .section;
     display: grid;
-    grid-template-columns: 10% 10% 60% 20%;
+    grid-template-columns: 30% 40% 30%;
+    grid-template-rows: 100%;
+}
+
+.subGrid{
+    .section;
+    display: grid;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
 }
 
 .dial{
   position: relative;
   height: 100%;
-  margin: auto;
-  grid-column: 1 / 2;
+  stretch
+  grid-column: 1 / span 2;
+  justify-self: center;
 }
 
 .image{
+  left:25%;
+  top:25%;
   position: relative;
-  margin: auto;
-  width: 40%;
-  margin:auto;
+  width: 30%;
+  justify-self: center;
 }
 
 .smallImage{
+  top: 15%;
+  position: relative;
   width: 30%;
-  margin:auto;
+  justify-self: center;
+}
+
+p{
+  text-align: left !important;
 }
 
 .meter {
