--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -6,18 +6,26 @@
     grid-template-rows: 100%;
 }
 
-.subGrid{
+.subGridA{
     .section;
+    text-align: left !important;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
 }
 
+.subGridB{
+    .section;
+    text-align: center !important;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 80% 20%;
+}
+
 .dial{
   position: relative;
+  top: -10px;
   height: 100%;
-  stretch
-  grid-column: 1 / span 2;
   justify-self: center;
 }
 
@@ -37,7 +45,6 @@
 }
 
 p{
-  text-align: left !important;
 }
 
 .meter {
