removed outline from menu buttons (looks nicer)

--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -67,6 +67,10 @@
   // transform: scale(1.01);
 }
 
+.dropdown Button:focus {
+  outline: none;
+}
+
 .dropdown {
   display: flex;
   justify-content: end;
@@ -79,6 +83,10 @@
 
 .icon:hover {
   fill: @offwhite;
+}
+
+.button:focus{
+  outline:none;
 }
 
 .button {
