--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -22,6 +22,10 @@
     grid-template-rows: 80% 20%;
 }
 
+.tempText {
+  align-self: center;
+}
+
 .dial{
   position: relative;
   top: -10px;
@@ -38,14 +42,9 @@
 }
 
 .smallImage{
-  top: 15%;
-  position: relative;
-  width: 30%;
+  width: 2em;
   justify-self: center;
-}
-
-p{
-
+  align-self: center;
 }
 
 .meter {
