--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -8,10 +8,12 @@
 
 .swellPathPrimary {
   fill: @primaryBlue;
+  transition: 1s;
 }
 
 .swellPathSecondary {
   fill: @secondaryBlue;
+  transition: 1s;
 }
 
 .cont {
