--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -49,6 +49,7 @@
 
 .meter {
   stroke: @primaryBlue;
+  transition: 1s;
 }
 
 .bg {
@@ -71,4 +72,5 @@
 
 .pointer {
   fill: @red;
+  transition: 1s;
 }
