button aesthetics nicer

--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -61,6 +61,7 @@
   border-radius: 1px;
   margin-right: 5px;
   transition: all 0.1s ease;
+  outline: none;
 }
 
 .dropdown Button:hover {
@@ -71,11 +72,13 @@
 .dropdown {
   display: flex;
   justify-content: end;
+  outline: none;
 }
 
 .icon {
   fill: @white;
   transition: all 0.1s ease;
+  outline: none;
 }
 
 .icon:hover {
@@ -85,6 +88,7 @@
 .button {
   background-color: transparent;
   border: none;
+  outline: none;
 }
 
 // .dropButton Button {
