implement global control of transition

--- a/src/components/frame/swell/swellGraph/style.less
+++ b/src/components/frame/swell/swellGraph/style.less
@@ -8,12 +8,12 @@
 
 .swellPathPrimary {
   fill: @primaryBlue;
-  transition: 1s;
+  .transition;
 }
 
 .swellPathSecondary {
   fill: @secondaryBlue;
-  transition: 1s;
+  .transition;
 }
 
 .cont {
