--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -49,7 +49,7 @@
 
 .meter {
   stroke: @primaryBlue;
-  transition: 1s;
+  .transition;
 }
 
 .bg {
@@ -72,5 +72,5 @@
 
 .pointer {
   fill: @red;
-  transition: 1s;
+  .transition;
 }
