--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -48,3 +48,7 @@
     color: @white;
     font-family: @fontFamily;
 }
+
+.transition() {
+    transition: all 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
