fixes from meeting

--- a/src/components/frame/tide/style.less
+++ b/src/components/frame/tide/style.less
@@ -4,12 +4,15 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto auto;
+    .line;
+    border-bottom: 1px solid @backdropGrey;
 }
 
 .svg {
     height: 20vh;
     max-width: 100%;
     justify-self: center;
+    
 }
 
 .hider {
@@ -23,6 +26,7 @@
 
 .wave {
     fill : @primaryBlue;
+    .transition;
 }
 
 .text {
