--- a/src/components/frame/style.less
+++ b/src/components/frame/style.less
@@ -3,8 +3,7 @@
 
 .grid {
 	display: grid;
-	grid-template-rows: 7.5vh 22.5vh 26vh 21.5vh 12.5vh 10vh;;
-	grid-gap: 0px;
+	grid-template-rows: 7.5vh 22.5vh 26vh 21.5vh 12.5vh 10vh;
 	max-width: 700px;
 	margin: auto;
 	background-color: @background;
