--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -34,7 +34,7 @@
 
 
 // Padding
-@sectionPadding : 5px;
+@sectionPadding : 5px 10px 5px 10px;
 
 // Mixins
 /* declare as follows
@@ -47,8 +47,13 @@
     padding: @sectionPadding;
     color: @white;
     font-family: @fontFamily;
+    margin: 5px 0px 5px 0px;
 }
 
 .transition() {
     transition: all 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.line() {
+    border-top: 1px solid @backdropGrey;
 }
