menu button fix

--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -51,7 +51,7 @@
   grid-row: 2;
 }
 
-.dropdown Button {
+.dropdown button {
   text-align: left;
   font-size: @mediumFont;
   // width: 150px;
@@ -64,12 +64,12 @@
   outline: none;
 }
 
-.dropdown Button:hover {
+.dropdown button:hover {
   background-color: @background;
   // transform: scale(1.01);
 }
 
-.dropdown Button:focus {
+.dropdown button:focus {
   outline: none;
 }
 
