--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -1,50 +1,38 @@
 @import '../../../../style/wavrStyle.less';
 .grid{
-    .section;
     display: grid;
     grid-template-columns: 30% 40% 30%;
-    grid-template-rows: 100%;
+    grid-template-rows: auto auto auto;
 }
 
-.subGridA{
-    .section;
-    text-align: left !important;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-}
+// .subGridA{
+//     .section;
+//     text-align: left !important;
+//     display: grid;
+//     grid-template-columns: 50% 50%;
+//     grid-template-rows: 50% 50%;
+// }
 
-.subGridB{
-    .section;
-    text-align: center !important;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 80% 20%;
-}
+// .subGridB{
+//     .section;
+//     text-align: center !important;
+//     display: grid;
+//     grid-template-columns: 100%;
+//     grid-template-rows: 80% 20%;
+// }
 
-.tempText {
-  align-self: center;
-}
+// .tempText {
+//   align-self: center;
+// }
 
-.dial{
-  position: relative;
-  top: -10px;
-  height: 100%;
-  justify-self: center;
-}
 
-.image{
-  left:25%;
-  top:25%;
-  position: relative;
-  width: 30%;
-  justify-self: center;
-}
+
+
 
 .smallImage{
   width: 2em;
-  justify-self: center;
-  align-self: center;
+  // justify-self: center;
+  // align-self: center;
 }
 
 .meter {
@@ -74,3 +62,57 @@
   fill: @red;
   .transition;
 }
+
+.tempBox, .chillBox {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.tempBox {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.chillBox {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.dial{
+  // position: relative;
+  // top: -10px;
+  // height: 100%;
+  // justify-self: center;
+  height: 80%;
+  grid-column: 2;
+  grid-row: 1 / span 2;
+  justify-self: center;
+}
+
+.windText {
+  grid-column: 1 / span 3;
+  grid-row: 3;
+  justify-self: center;
+}
+
+.image{
+  // left:25%;
+  // top:25%;
+  // position: relative;
+  width: 30%;
+  justify-self: center;
+  grid-column: 3;
+  grid-row: 1 / span 2;
+  align-self: center;
+
+}
+
+// .tempChillCont {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-around;
+//   align-content: center;
+//   align-items: center;
+// }
