--- a/src/components/frame/weather/style.less
+++ b/src/components/frame/weather/style.less
@@ -5,6 +5,6 @@
     position: relative;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: auto;
+    grid-template-rows: min-content auto;
     .line;
 }
