--- a/src/components/frame/swell/style.less
+++ b/src/components/frame/swell/style.less
@@ -4,7 +4,7 @@
   .section;
   display: grid;
 	grid-template-columns: 35% auto;
-  grid-template-rows: 30px 130px;
+  grid-template-rows: min-content auto;
   position: relative;
   .line;
 }
