--- a/src/components/frame/swell/swellBoxes/style.less
+++ b/src/components/frame/swell/swellBoxes/style.less
@@ -4,15 +4,18 @@
   font-size: @mediumFont;
   font-weight: bold;
   padding: 10px;
-  margin: 4px;
   white-space: nowrap;
   width: 100%;
   transition: opacity 0.2s;
-  align-self: stretch;
+  align-self: flex-end;
+  min-width: 120px;
+  max-width: 150px;
+  padding: 9px 10px;
 }
 
 .box1{
   background-color: @primaryBlue;
+  margin-bottom: 4px;
 }
 
 .box2{
@@ -26,8 +29,8 @@
 .cont {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-content:center;
   align-items: center;
-  padding: 5%;
+  margin: 1px;
 }
