css general spacing

--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -47,7 +47,7 @@
     padding: @sectionPadding;
     color: @white;
     font-family: @fontFamily;
-    margin: 5px 0px 5px 0px;
+    // margin: 5px 0px 5px 0px;
 }
 
 .transition() {
