--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -59,7 +59,7 @@
   background-color: @backdropGrey;
   // border: 2px solid black;
   border-radius: 1px;
-  margin-right: 5px;
+  // margin-right: 5px;
   transition: all 0.1s ease;
   outline: none;
 }
