--- a/src/components/frame/tide/style.less
+++ b/src/components/frame/tide/style.less
@@ -9,10 +9,11 @@
 }
 
 .svg {
-    height: 20vh;
-    max-width: 100%;
+    height: 100%;
     justify-self: center;
-    
+    max-width: 355px;
+    width: 100%;
+    margin-top: -10px;
 }
 
 .hider {
