change size of weather icon and stars

--- a/src/components/frame/weather/conditions/style.less
+++ b/src/components/frame/weather/conditions/style.less
@@ -101,7 +101,8 @@
   // left:25%;
   // top:25%;
   // position: relative;
-  width: 30%;
+  width: 45%;
+  max-width: 60px;
   justify-self: center;
   grid-column: 3;
   grid-row: 1 / span 2;
