--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .infoLayout {
@@ -13,7 +14,6 @@
   display: grid;
   // grid-template-columns: auto 70px auto;
   grid-template-columns: auto auto;
-
   grid-template-rows: 15px 15px;
   grid-gap: 0px 5px;
 }
@@ -25,7 +25,7 @@
 }
 
 .locName {
-  grid-row: 1;
+  grid-row: 1 / span 2;
   grid-column: 1;
   display: block;
   font-size: 1.5em;
@@ -62,6 +62,7 @@
   // margin-right: 5px;
   transition: all 0.1s ease;
   outline: none;
+  margin-left: 5px;
 }
 
 .dropdown button:hover {
@@ -77,6 +78,9 @@
   display: flex;
   justify-content: end;
   outline: none;
+  position: absolute;
+  right: 5px;
+  top: 13px;
 }
 
 .icon {
