--- a/src/components/frame/menu/style.less
+++ b/src/components/frame/menu/style.less
@@ -57,12 +57,12 @@
   // width: 150px;
   color: @white;
   background-color: @backdropGrey;
-  // border: 2px solid black;
-  border-radius: 1px;
+  border: none;
+  //border-radius: 1px;
   // margin-right: 5px;
   transition: all 0.1s ease;
   outline: none;
-  margin-left: 5px;
+  margin-left: 0px;
 }
 
 .dropdown button:hover {
