--- a/src/components/frame/title/style.less
+++ b/src/components/frame/title/style.less
@@ -1,5 +1,11 @@
 @import '../../../style/wavrStyle.less';
 
+.box{
+  display: grid;
+  grid-template-columns: auto 3% 80%;
+  grid-template-rows: 100%;
+}
+
 .title{
   grid-column: 1 / span 2;
   align-self: center;
