--- a/src/style/wavrStyle.less
+++ b/src/style/wavrStyle.less
@@ -49,6 +49,7 @@
     padding: @sectionPadding;
     color: @white;
     font-family: @fontFamily;
+    font-weight: bold;
     // margin: 5px 0px 5px 0px;
 }
 
@@ -64,6 +65,7 @@
   // margin: 20px 60px;
   position: relative;
   display: inline-block;
+  font-family: @fontFamily;
 }
 [tooltip]::before {
     content: "";
